[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

p1 = { path = "../p1" }
p2 = { path = "../p2" }
p3 = { path = "../p3" }
p4 = { path = "../p4" }
p5 = { path = "../p5" }
p6 = { path = "../p6" }
p7 = { path = "../p7" }
p8 = { path = "../p8" }
p9 = { path = "../p9" }
p10 = { path = "../p10" }
p11 = { path = "../p11" }
p12 = { path = "../p12" }
p13 = { path = "../p13" }
p14 = { path = "../p14" }